force-app/main/default/objects/Consultation_Visit__c/Consultation_Visit__c.object-meta.xml
<CustomObject>
    <label>Consultation Visit</label>
    <nameField>
        <displayFormat>CV-{000000}</displayFormat>
        <label>Consultation Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultation Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>