force-app/main/default/objects/Consultation_Visit__c/fields/Advisor_Who_Visited__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Who_Visited__c</fullName>
    <label>Advisor Who Visited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Advisor_Who_Visited</valueSetName>
    </valueSet>
</CustomField>