force-app/main/default/objects/Consultation_Visit__c/fields/Consultation_Visit_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Visit_Form_Received__c</fullName>
    <label>Consultation Visit Form Received</label>
    <type>Date</type>
</CustomField>