force-app/main/default/objects/Consultation_Visit__c/fields/Date_of_Consultation_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Consultation_Visit__c</fullName>
    <label>Date of Consultation Visit</label>
    <type>Date</type>
</CustomField>