force-app/main/default/objects/Consultation_Visit__c/fields/isLatestCV__c.field-meta.xml
<CustomField>
    <fullName>isLatestCV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLatestCV</label>
    <type>Checkbox</type>
</CustomField>