force-app/main/default/objects/Consultation_Visit__c/fields/SYSTEM_Days_Since_Visit__c.field-meta.xml
<CustomField>
    <fullName>SYSTEM_Days_Since_Visit__c</fullName>
    <formula>today()- Date_of_Consultation_Visit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SYSTEM_Days Since Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>